--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "deploy": "gh-pages -d client",
+    "deploy": "gh-pages -d client/public",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
